@@ -7,6 +7,9 @@
 - urpmi.addmedia
   o instead of discarding --update when using --distrib, give it a meaning:
     only add media flagged "update"
+  o handle $URPMI_ADDMEDIA_REASON 
+    (special reason to give to api.mandriva.com/mirrors/... to allow statistics)
+
 - gurpmi2
   o nicer default window size
   o render nicely under matchbox during install
